# tgnews

./: Cargo.toml  Readme.md  build.rs  make-solution.sh
protos/: server_files.proto
src/: alexa.rs  categories.rs  document.rs  languages.rs  logger.rs  main.rs  news.rs  server.rs  slink.rs  threads.rs  utils.rs
src/categories/: classifiers.rs  enums.rs
src/server/: cluster.rs  delete_article.rs  enums.rs  fast_text.rs  protos.rs  static_pools.rs  top.rs  upload.rs
src/server/protos/: server_files.rs
src/threads/: annotator.rs
